--- a/generator/package.json
+++ b/generator/package.json
@@ -7,7 +7,8 @@
   "sideEffects": false,
   "scripts": {
     "submodule": "git submodule init && git submodule update",
-    "lint": "tslint --fix -p tsconfig.json"
+    "lint": "tslint --fix -p tsconfig.json",
+    "start": "ts-node ts/generate.ts"
   },
   "repository": {
     "type": "git",
@@ -34,10 +35,13 @@
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
     "typedoc": "^0.12.0",
-    "typescript": "^3.0.0",
+    "typescript": "^3.1.6",
     "underscore": "^1.9.1"
   },
   "dependencies": {
-    "mustache": "^3.0.1"
+    "@types/lodash": "^4.14.118",
+    "@types/mustache": "^0.8.32",
+    "mustache": "^3.0.1",
+    "shelljs": "^0.8.3"
   }
 }
