--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bungie_api_dart
+name: bungie_api
 description: Dart mappings for the Bungie.net API.
 
 # The following defines the version and build number for your application.
