--- a/generator/package.json
+++ b/generator/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "submodule": "git submodule init && git submodule update",
+    "submodule": "git submodule init && git submodule update --remote",
     "lint": "tslint --fix -p tsconfig.json",
     "start": "ts-node ts/generate.ts"
   },
